# coffee-bean-analyzer

./: .gitignore  CLAUDE.md  README.md  analyze_beans.py  analyzer.py  comprehensive_analyzer.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
coffee_bean_analyzer/analysis/: analyzer.py
coffee_bean_analyzer/cli/: main.py
coffee_bean_analyzer/cli/commands/: analyze.py
coffee_bean_analyzer/config/: config_loader.py
coffee_bean_analyzer/core/: detector.py  measurer.py  optimizer.py  preprocessor.py  segmentor.py
coffee_bean_analyzer/io/: data_handler.py
coffee_bean_analyzer/utils/: file_finder.py  logging_config.py  report_generator.py  visualization.py
tests/: test_analysis_module.py  test_analyze_bean.py  test_analyzer.py  test_cli.py  test_comprehensive_analyzer.py  test_config_loader.py  test_detector.py  test_detector_coverage.py  test_measurer.py  test_optimizer.py  test_preprocessor.py  test_segmentor.py  test_utils.py
tests/data/: beans_ground_truth.csv
